--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "open": "cypress open"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cypress": "8.7"
+  }
 }
